deps/v8/test/message/fail/spread-call-4.out
*%(basename)s:5: TypeError: Found non-callable @@iterator
console.log(1, ...x);
                  ^
TypeError: Found non-callable @@iterator
    at *%(basename)s:5:9
